--- a/contracts/artifacts/Mapping_metadata.json
+++ b/contracts/artifacts/Mapping_metadata.json
@@ -1,6 +1,6 @@
 {
 	"compiler": {
-		"version": "0.8.26+commit.8a97fa7a"
+		"version": "0.8.17+commit.8df45f5f"
 	},
 	"language": "Solidity",
 	"output": {
@@ -179,7 +179,7 @@
 		"compilationTarget": {
 			"contracts/Mapping.sol": "Mapping"
 		},
-		"evmVersion": "cancun",
+		"evmVersion": "london",
 		"libraries": {},
 		"metadata": {
 			"bytecodeHash": "ipfs"
